--- a/index.html
+++ b/index.html
@@ -56,12 +56,10 @@
                             </a>
                         </li>
                         <li class="icon-yt">
-                            <a target="_blank" href="https://www.youtube.com/channel/UCj76PT6i5OBqBMgEGCHYdTA"><i
-                                    class="fa fa-youtube-play" aria-hidden="true"></i></a>
+                            <a target="_blank" href=""><img width="100%" src="svg/youtube.svg" alt=""></a>
                         </li>
                         <li class="icon-fb">
-                            <a target="_blank" href="https://www.facebook.com/tapdoanhoaphat1992/"><i
-                                    class="fa fa-facebook" aria-hidden="true"></i></a>
+                            <a target="_blank" href=""><img width="100%" src="svg/facebook.svg" alt=""></a>
                         </li>
                     </ul>
                 </div>
