--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
                     <ul>
                         <li>
                             <a href="https://www.hoaphat.com.vn/en">
-                                <img style="width: 28px;height: 28px;border-radius: 50%;padding-top: 0;float: right;"
-                                     src="images/icon-en.png" alt="">
+                                <svg style="float: right" enable-background="new 0 0 512 512" width="28px" height="28px" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><circle cx="256" cy="256" fill="#f0f0f0" r="256"/>
+                                    <g fill="#d80027"><path d="m244.87 256h267.13c0-23.106-3.08-45.49-8.819-66.783h-258.311z"/><path d="m244.87 122.435h229.556c-15.671-25.572-35.708-48.175-59.07-66.783h-170.486z"/><path d="m256 512c60.249 0 115.626-20.824 159.356-55.652h-318.712c43.73 34.828 99.107 55.652 159.356 55.652z"/><path d="m37.574 389.565h436.852c12.581-20.529 22.338-42.969 28.755-66.783h-494.362c6.417 23.814 16.174 46.254 28.755 66.783z"/></g><path d="m118.584 39.978h23.329l-21.7 15.765 8.289 25.509-21.699-15.765-21.699 15.765 7.16-22.037c-19.106 15.915-35.852 34.561-49.652 55.337h7.475l-13.813 10.035c-2.152 3.59-4.216 7.237-6.194 10.938l6.596 20.301-12.306-8.941c-3.059 6.481-5.857 13.108-8.372 19.873l7.267 22.368h26.822l-21.7 15.765 8.289 25.509-21.699-15.765-12.998 9.444c-1.301 10.458-1.979 21.11-1.979 31.921h256c0-141.384 0-158.052 0-256-50.572 0-97.715 14.67-137.416 39.978zm9.918 190.422-21.699-15.765-21.699 15.765 8.289-25.509-21.7-15.765h26.822l8.288-25.509 8.288 25.509h26.822l-21.7 15.765zm-8.289-100.083 8.289 25.509-21.699-15.765-21.699 15.765 8.289-25.509-21.7-15.765h26.822l8.288-25.509 8.288 25.509h26.822zm100.115 100.083-21.699-15.765-21.699 15.765 8.289-25.509-21.7-15.765h26.822l8.288-25.509 8.288 25.509h26.822l-21.7 15.765zm-8.289-100.083 8.289 25.509-21.699-15.765-21.699 15.765 8.289-25.509-21.7-15.765h26.822l8.288-25.509 8.288 25.509h26.822zm0-74.574 8.289 25.509-21.699-15.765-21.699 15.765 8.289-25.509-21.7-15.765h26.822l8.288-25.509 8.288 25.509h26.822z" fill="#0052b4"/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/>
+                                </svg>
                             </a>
                         </li>
                         <li class="icon-yt">
@@ -162,7 +163,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="/tin-tuc/tin-tuc-tap-doan">Tin tức</a>
+                        <a href="tintuc.html">Tin tức</a>
                         <ul class="sub-menu">
                             <li>
                                 <a href="https://www.hoaphat.com.vn/tin-tuc/tin-tuc-tap-doan">Tin tức tập đoàn</a>
@@ -1026,7 +1027,11 @@
     <div class="wrap">
         <div class="col col1">
             <a href=""><i class="icon-hoaphat icon-logo-footer"></i></a>
-            <p><i class="fa fa-map-marker" aria-hidden="true"></i> KCN Phố Nối A, Xã Giai Phạm, Huyện Yên Mỹ, Tỉnh Hưng Yên, Việt Nam</p>
+            <p><svg enable-background="new 0 0 512 512" fill="#ffffff" height="14" viewBox="0 0 512 512" width="23" xmlns="http://www.w3.org/2000/svg">
+                <g>
+                    <path d="m407.579 87.677c-31.073-53.624-86.265-86.385-147.64-87.637-2.62-.054-5.257-.054-7.878 0-61.374 1.252-116.566 34.013-147.64 87.637-31.762 54.812-32.631 120.652-2.325 176.123l126.963 232.387c.057.103.114.206.173.308 5.586 9.709 15.593 15.505 26.77 15.505 11.176 0 21.183-5.797 26.768-15.505.059-.102.116-.205.173-.308l126.963-232.387c30.304-55.471 29.435-121.311-2.327-176.123zm-151.579 144.323c-39.701 0-72-32.299-72-72s32.299-72 72-72 72 32.299 72 72-32.298 72-72 72z"/>
+                </g>
+            </svg> KCN Phố Nối A, Xã Giai Phạm, Huyện Yên Mỹ, Tỉnh Hưng Yên, Việt Nam</p>
             <ul>
                 <li><a target="_blank" href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                 <li><a target="_blank" href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -1039,33 +1044,70 @@
         <div class="col col2">
             <p class="title">Văn Phòng Hà Nội</p>
             <ul>
-                <li><i class="fa fa-map-marker" aria-hidden="true"></i>66 Nguyễn Du, P. Nguyễn Du, Q. Hai Bà Trưng, Hà Nội</li>
-                <li><i class="fa fa-phone" aria-hidden="true"></i>024 628 48 666</li>
-                <li><i class="fa fa-fax" aria-hidden="true"></i>024 628 33 456</li>
+                <li><svg enable-background="new 0 0 512 512" fill="#ffffff" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                    <g>
+                        <path d="m407.579 87.677c-31.073-53.624-86.265-86.385-147.64-87.637-2.62-.054-5.257-.054-7.878 0-61.374 1.252-116.566 34.013-147.64 87.637-31.762 54.812-32.631 120.652-2.325 176.123l126.963 232.387c.057.103.114.206.173.308 5.586 9.709 15.593 15.505 26.77 15.505 11.176 0 21.183-5.797 26.768-15.505.059-.102.116-.205.173-.308l126.963-232.387c30.304-55.471 29.435-121.311-2.327-176.123zm-151.579 144.323c-39.701 0-72-32.299-72-72s32.299-72 72-72 72 32.299 72 72-32.298 72-72 72z"/>
+                    </g>
+                </svg>66 Nguyễn Du, P. Nguyễn Du, Q. Hai Bà Trưng, Hà Nội</li>
+                <li><svg fill="#ffffff" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><path d="m30.035 22.6c-.082-.065-6.035-4.356-7.669-4.048-.78.138-1.226.67-2.121 1.735-.144.172-.49.584-.759.877a12.517 12.517 0 0 1 -1.651-.672 13.7 13.7 0 0 1 -6.321-6.321 12.458 12.458 0 0 1 -.672-1.651c.294-.27.706-.616.882-.764 1.06-.89 1.593-1.336 1.731-2.118.283-1.62-4.005-7.614-4.05-7.668a2.289 2.289 0 0 0 -1.705-.97c-1.738 0-6.7 6.437-6.7 7.521 0 .063.091 6.467 7.988 14.5 8.025 7.888 14.428 7.979 14.491 7.979 1.085 0 7.521-4.962 7.521-6.7a2.283 2.283 0 0 0 -.965-1.7z"/>
+                </svg>024 628 48 666</li>
+                <li>
+                    <svg id="Capa_1" enable-background="new 0 0 512 512" fill="#ffffff" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                        <g>
+                            <path d="m471.647 176.983v-78.568l-98.811-98.415h-199.071v177.009l-40.353.004v-60.2h-133.059l-.353 395.187h512v-335.021zm-90-125.835 38.675 38.52h-38.675zm-177.882-21.104h147.882v89.668h90v57.273l-237.882.021zm-173.412 116.813h73.059v335.099h-73.059zm451.647 335.099h-348.588v-274.899l348.588-.032z"/><path d="m417 235.45h-218.588v99.133h218.588zm-30 69.09h-158.588v-39.045h158.588z"/><path d="m198.412 365.41h30v30.044h-30z"/><path d="m261.274 365.41h30v30.044h-30z"/><path d="m324.137 365.41h30v30.044h-30z"/><path d="m387 365.41h30v30.044h-30z"/><path d="m198.412 421.483h30v30.044h-30z"/><path d="m261.274 421.483h30v30.044h-30z"/><path d="m324.137 421.483h30v30.044h-30z"/><path d="m387 421.483h30v30.044h-30z"/>
+                        </g>
+                    </svg>024 628 33 456</li>
             </ul>
         </div>
         <div class="col col2">
             <p class="title">Văn Phòng Đà Nẵng</p>
             <ul>
-                <li><i class="fa fa-map-marker" aria-hidden="true"></i>171 Trường Chinh, P. An khê, Q. Thanh Khê, Đà Nẵng</li>
-                <li><i class="fa fa-phone" aria-hidden="true"></i>023 637 21 232</li>
-                <li><i class="fa fa-fax" aria-hidden="true"></i>024 628 33 456</li>
+                <li><svg enable-background="new 0 0 512 512" fill="#ffffff" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                    <g>
+                        <path d="m407.579 87.677c-31.073-53.624-86.265-86.385-147.64-87.637-2.62-.054-5.257-.054-7.878 0-61.374 1.252-116.566 34.013-147.64 87.637-31.762 54.812-32.631 120.652-2.325 176.123l126.963 232.387c.057.103.114.206.173.308 5.586 9.709 15.593 15.505 26.77 15.505 11.176 0 21.183-5.797 26.768-15.505.059-.102.116-.205.173-.308l126.963-232.387c30.304-55.471 29.435-121.311-2.327-176.123zm-151.579 144.323c-39.701 0-72-32.299-72-72s32.299-72 72-72 72 32.299 72 72-32.298 72-72 72z"/>
+                    </g>
+                </svg>171 Trường Chinh, P. An khê, Q. Thanh Khê, Đà Nẵng</li>
+                <li><svg fill="#ffffff" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><path d="m30.035 22.6c-.082-.065-6.035-4.356-7.669-4.048-.78.138-1.226.67-2.121 1.735-.144.172-.49.584-.759.877a12.517 12.517 0 0 1 -1.651-.672 13.7 13.7 0 0 1 -6.321-6.321 12.458 12.458 0 0 1 -.672-1.651c.294-.27.706-.616.882-.764 1.06-.89 1.593-1.336 1.731-2.118.283-1.62-4.005-7.614-4.05-7.668a2.289 2.289 0 0 0 -1.705-.97c-1.738 0-6.7 6.437-6.7 7.521 0 .063.091 6.467 7.988 14.5 8.025 7.888 14.428 7.979 14.491 7.979 1.085 0 7.521-4.962 7.521-6.7a2.283 2.283 0 0 0 -.965-1.7z"/>
+                </svg>023 637 21 232</li>
+                <li><svg id="Capa_1" enable-background="new 0 0 512 512" fill="#ffffff" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                    <g>
+                        <path d="m471.647 176.983v-78.568l-98.811-98.415h-199.071v177.009l-40.353.004v-60.2h-133.059l-.353 395.187h512v-335.021zm-90-125.835 38.675 38.52h-38.675zm-177.882-21.104h147.882v89.668h90v57.273l-237.882.021zm-173.412 116.813h73.059v335.099h-73.059zm451.647 335.099h-348.588v-274.899l348.588-.032z"/><path d="m417 235.45h-218.588v99.133h218.588zm-30 69.09h-158.588v-39.045h158.588z"/><path d="m198.412 365.41h30v30.044h-30z"/><path d="m261.274 365.41h30v30.044h-30z"/><path d="m324.137 365.41h30v30.044h-30z"/><path d="m387 365.41h30v30.044h-30z"/><path d="m198.412 421.483h30v30.044h-30z"/><path d="m261.274 421.483h30v30.044h-30z"/><path d="m324.137 421.483h30v30.044h-30z"/><path d="m387 421.483h30v30.044h-30z"/>
+                    </g>
+                </svg>024 628 33 456</li>
             </ul>
         </div>
         <div class="col col2">
             <p class="title">Văn Phòng TP HCM</p>
             <ul>
-                <li><i class="fa fa-map-marker" aria-hidden="true"></i>643 Điện Biên Phủ, P. 25, Q. Bình Thạnh, TP. Hồ Chí Minh</li>
-                <li><i class="fa fa-phone" aria-hidden="true"></i>028 629 75 599</li>
-                <li><i class="fa fa-fax" aria-hidden="true"></i>024 628 33 456</li>
+                <li><svg enable-background="new 0 0 512 512" fill="#ffffff" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                    <g>
+                        <path d="m407.579 87.677c-31.073-53.624-86.265-86.385-147.64-87.637-2.62-.054-5.257-.054-7.878 0-61.374 1.252-116.566 34.013-147.64 87.637-31.762 54.812-32.631 120.652-2.325 176.123l126.963 232.387c.057.103.114.206.173.308 5.586 9.709 15.593 15.505 26.77 15.505 11.176 0 21.183-5.797 26.768-15.505.059-.102.116-.205.173-.308l126.963-232.387c30.304-55.471 29.435-121.311-2.327-176.123zm-151.579 144.323c-39.701 0-72-32.299-72-72s32.299-72 72-72 72 32.299 72 72-32.298 72-72 72z"/>
+                    </g>
+                </svg>643 Điện Biên Phủ, P. 25, Q. Bình Thạnh, TP. Hồ Chí Minh</li>
+                <li><svg fill="#ffffff" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><path d="m30.035 22.6c-.082-.065-6.035-4.356-7.669-4.048-.78.138-1.226.67-2.121 1.735-.144.172-.49.584-.759.877a12.517 12.517 0 0 1 -1.651-.672 13.7 13.7 0 0 1 -6.321-6.321 12.458 12.458 0 0 1 -.672-1.651c.294-.27.706-.616.882-.764 1.06-.89 1.593-1.336 1.731-2.118.283-1.62-4.005-7.614-4.05-7.668a2.289 2.289 0 0 0 -1.705-.97c-1.738 0-6.7 6.437-6.7 7.521 0 .063.091 6.467 7.988 14.5 8.025 7.888 14.428 7.979 14.491 7.979 1.085 0 7.521-4.962 7.521-6.7a2.283 2.283 0 0 0 -.965-1.7z"/>
+                </svg>028 629 75 599</li>
+                <li><svg id="Capa_1" enable-background="new 0 0 512 512" fill="#ffffff" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                    <g>
+                        <path d="m471.647 176.983v-78.568l-98.811-98.415h-199.071v177.009l-40.353.004v-60.2h-133.059l-.353 395.187h512v-335.021zm-90-125.835 38.675 38.52h-38.675zm-177.882-21.104h147.882v89.668h90v57.273l-237.882.021zm-173.412 116.813h73.059v335.099h-73.059zm451.647 335.099h-348.588v-274.899l348.588-.032z"/><path d="m417 235.45h-218.588v99.133h218.588zm-30 69.09h-158.588v-39.045h158.588z"/><path d="m198.412 365.41h30v30.044h-30z"/><path d="m261.274 365.41h30v30.044h-30z"/><path d="m324.137 365.41h30v30.044h-30z"/><path d="m387 365.41h30v30.044h-30z"/><path d="m198.412 421.483h30v30.044h-30z"/><path d="m261.274 421.483h30v30.044h-30z"/><path d="m324.137 421.483h30v30.044h-30z"/><path d="m387 421.483h30v30.044h-30z"/>
+                    </g>
+                </svg>024 628 33 456</li>
             </ul>
         </div>
         <div class="col col2">
             <p class="title">Văn Phòng Singapore</p>
             <ul>
-                <li><i class="fa fa-map-marker" aria-hidden="true"></i>38-03 Singapore Land Tower, 50 Raffles Place, Singapore 048623</li>
-                <li><i class="fa fa-phone" aria-hidden="true"></i>(65) 6610 8527</li>
-                <li><i class="fa fa-fax" aria-hidden="true"></i>(65) 6612 3055</li>
+                <li><svg enable-background="new 0 0 512 512" fill="#ffffff" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                    <g>
+                        <path d="m407.579 87.677c-31.073-53.624-86.265-86.385-147.64-87.637-2.62-.054-5.257-.054-7.878 0-61.374 1.252-116.566 34.013-147.64 87.637-31.762 54.812-32.631 120.652-2.325 176.123l126.963 232.387c.057.103.114.206.173.308 5.586 9.709 15.593 15.505 26.77 15.505 11.176 0 21.183-5.797 26.768-15.505.059-.102.116-.205.173-.308l126.963-232.387c30.304-55.471 29.435-121.311-2.327-176.123zm-151.579 144.323c-39.701 0-72-32.299-72-72s32.299-72 72-72 72 32.299 72 72-32.298 72-72 72z"/>
+                    </g>
+                </svg>38-03 Singapore Land Tower, 50 Raffles Place, Singapore 048623</li>
+                <li><svg fill="#ffffff" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><path d="m30.035 22.6c-.082-.065-6.035-4.356-7.669-4.048-.78.138-1.226.67-2.121 1.735-.144.172-.49.584-.759.877a12.517 12.517 0 0 1 -1.651-.672 13.7 13.7 0 0 1 -6.321-6.321 12.458 12.458 0 0 1 -.672-1.651c.294-.27.706-.616.882-.764 1.06-.89 1.593-1.336 1.731-2.118.283-1.62-4.005-7.614-4.05-7.668a2.289 2.289 0 0 0 -1.705-.97c-1.738 0-6.7 6.437-6.7 7.521 0 .063.091 6.467 7.988 14.5 8.025 7.888 14.428 7.979 14.491 7.979 1.085 0 7.521-4.962 7.521-6.7a2.283 2.283 0 0 0 -.965-1.7z"/>
+                </svg>(65) 6610 8527</li>
+                <li><svg id="Capa_1" enable-background="new 0 0 512 512" fill="#ffffff" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                    <g>
+                        <path d="m471.647 176.983v-78.568l-98.811-98.415h-199.071v177.009l-40.353.004v-60.2h-133.059l-.353 395.187h512v-335.021zm-90-125.835 38.675 38.52h-38.675zm-177.882-21.104h147.882v89.668h90v57.273l-237.882.021zm-173.412 116.813h73.059v335.099h-73.059zm451.647 335.099h-348.588v-274.899l348.588-.032z"/><path d="m417 235.45h-218.588v99.133h218.588zm-30 69.09h-158.588v-39.045h158.588z"/><path d="m198.412 365.41h30v30.044h-30z"/><path d="m261.274 365.41h30v30.044h-30z"/><path d="m324.137 365.41h30v30.044h-30z"/><path d="m387 365.41h30v30.044h-30z"/><path d="m198.412 421.483h30v30.044h-30z"/><path d="m261.274 421.483h30v30.044h-30z"/><path d="m324.137 421.483h30v30.044h-30z"/><path d="m387 421.483h30v30.044h-30z"/>
+                    </g>
+                </svg>(65) 6612 3055</li>
             </ul>
         </div>
 
@@ -1268,8 +1310,8 @@
 
             $newActive.classList.add('s--active');
 
-            $('#home-slider-thumbnail .owl-item.active').removeClass('active');
-            $('.button' + index).addClass('active');
+            // $('#home-slider-thumbnail .owl-item.active').removeClass('active');
+            // $('.button' + index).addClass('active');
 
             slidingBlocked = false;
             $('.slide__inner .text').removeClass('anima');
@@ -1278,13 +1320,13 @@
 
         setInterval(function () {
             controlClickHandler()
-        }, 5000);
+        }, 8000);
 
-        $('#home-slider-thumbnail .owl-item').hover(function () {
-            $('#home-slider-thumbnail .owl-item.active').removeClass('active');
-            $(this).addClass('active');
-            controlClickHandler($(this).index());
-        });
+        // $('#home-slider-thumbnail .owl-item').hover(function () {
+        //     $('#home-slider-thumbnail .owl-item.active').removeClass('active');
+        //     $(this).addClass('active');
+        //     controlClickHandler($(this).index());
+        // });
     });
 </script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
