--- a/index.html
+++ b/index.html
@@ -1073,30 +1073,12 @@
 <div id="footer" class="default">
     <div class="background">
     <div class="wrap">
-        <div class="col col1">
-            <a href=""><i class="icon-hoaphat icon-logo-footer"></i></a>
-            <p>
-                <svg enable-background="new 0 0 512 512" fill="#ffffff" height="14" viewBox="0 0 512 512" width="23"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <g>
-                        <path d="m407.579 87.677c-31.073-53.624-86.265-86.385-147.64-87.637-2.62-.054-5.257-.054-7.878 0-61.374 1.252-116.566 34.013-147.64 87.637-31.762 54.812-32.631 120.652-2.325 176.123l126.963 232.387c.057.103.114.206.173.308 5.586 9.709 15.593 15.505 26.77 15.505 11.176 0 21.183-5.797 26.768-15.505.059-.102.116-.205.173-.308l126.963-232.387c30.304-55.471 29.435-121.311-2.327-176.123zm-151.579 144.323c-39.701 0-72-32.299-72-72s32.299-72 72-72 72 32.299 72 72-32.298 72-72 72z"/>
-                    </g>
-                </svg>
-                KCN Phố Nối A, Xã Giai Phạm, Huyện Yên Mỹ, Tỉnh Hưng Yên, Việt Nam
-            </p>
-            <ul>
-                <li><a target="_blank" href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                <li><a target="_blank" href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                <li><a target="_blank" href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                <li><a target="_blank" href="" title="Link mail nội bộ"><i class="fa fa-envelope-o"
-                                                                           aria-hidden="true"></i></a></li>
-                <li><a target="_blank" href=""><i class="fa fa-vimeo" aria-hidden="true"></i></a></li>
-            </ul>
-        </div>
-
         <div class="col col2">
-            <p class="title">Văn Phòng Hà Nội</p>
+            <p class="title">THÔNG TIN LIÊN HỆ</p>
             <ul>
+                <li>
+                   <p>Liên hệ văn phòng VISI hoặc gọi điện cho chúng tôi để nhận được tư vấn và hỗ trợ một cách nhanh nhất</p>
+                </li>
                 <li>
                     <svg enable-background="new 0 0 512 512" fill="#ffffff" viewBox="0 0 512 512"
                          xmlns="http://www.w3.org/2000/svg">
@@ -1104,13 +1086,7 @@
                             <path d="m407.579 87.677c-31.073-53.624-86.265-86.385-147.64-87.637-2.62-.054-5.257-.054-7.878 0-61.374 1.252-116.566 34.013-147.64 87.637-31.762 54.812-32.631 120.652-2.325 176.123l126.963 232.387c.057.103.114.206.173.308 5.586 9.709 15.593 15.505 26.77 15.505 11.176 0 21.183-5.797 26.768-15.505.059-.102.116-.205.173-.308l126.963-232.387c30.304-55.471 29.435-121.311-2.327-176.123zm-151.579 144.323c-39.701 0-72-32.299-72-72s32.299-72 72-72 72 32.299 72 72-32.298 72-72 72z"/>
                         </g>
                     </svg>
-                    66 Nguyễn Du, P. Nguyễn Du, Q. Hai Bà Trưng, Hà Nội
-                </li>
-                <li>
-                    <svg fill="#ffffff" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-                        <path d="m30.035 22.6c-.082-.065-6.035-4.356-7.669-4.048-.78.138-1.226.67-2.121 1.735-.144.172-.49.584-.759.877a12.517 12.517 0 0 1 -1.651-.672 13.7 13.7 0 0 1 -6.321-6.321 12.458 12.458 0 0 1 -.672-1.651c.294-.27.706-.616.882-.764 1.06-.89 1.593-1.336 1.731-2.118.283-1.62-4.005-7.614-4.05-7.668a2.289 2.289 0 0 0 -1.705-.97c-1.738 0-6.7 6.437-6.7 7.521 0 .063.091 6.467 7.988 14.5 8.025 7.888 14.428 7.979 14.491 7.979 1.085 0 7.521-4.962 7.521-6.7a2.283 2.283 0 0 0 -.965-1.7z"/>
-                    </svg>
-                    024 628 48 666
+                    Tầng 18A, tòa nhà MHDI, số 68 Nguyễn Cơ Thạch, Nam Từ Liêm, Hà Nội
                 </li>
                 <li>
                     <svg id="Capa_1" enable-background="new 0 0 512 512" fill="#ffffff" viewBox="0 0 512 512"
@@ -1128,125 +1104,61 @@
                             <path d="m387 421.483h30v30.044h-30z"/>
                         </g>
                     </svg>
-                    024 628 33 456
-                </li>
-            </ul>
-        </div>
-        <div class="col col2">
-            <p class="title">Văn Phòng Đà Nẵng</p>
-            <ul>
-                <li>
-                    <svg enable-background="new 0 0 512 512" fill="#ffffff" viewBox="0 0 512 512"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <g>
-                            <path d="m407.579 87.677c-31.073-53.624-86.265-86.385-147.64-87.637-2.62-.054-5.257-.054-7.878 0-61.374 1.252-116.566 34.013-147.64 87.637-31.762 54.812-32.631 120.652-2.325 176.123l126.963 232.387c.057.103.114.206.173.308 5.586 9.709 15.593 15.505 26.77 15.505 11.176 0 21.183-5.797 26.768-15.505.059-.102.116-.205.173-.308l126.963-232.387c30.304-55.471 29.435-121.311-2.327-176.123zm-151.579 144.323c-39.701 0-72-32.299-72-72s32.299-72 72-72 72 32.299 72 72-32.298 72-72 72z"/>
-                        </g>
-                    </svg>
-                    171 Trường Chinh, P. An khê, Q. Thanh Khê, Đà Nẵng
+                    support@visi.com.vn/<br><a class="email" href="linhnt@visi.com.vn">linhnt@visi.com.vn</a>
                 </li>
                 <li>
                     <svg fill="#ffffff" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
                         <path d="m30.035 22.6c-.082-.065-6.035-4.356-7.669-4.048-.78.138-1.226.67-2.121 1.735-.144.172-.49.584-.759.877a12.517 12.517 0 0 1 -1.651-.672 13.7 13.7 0 0 1 -6.321-6.321 12.458 12.458 0 0 1 -.672-1.651c.294-.27.706-.616.882-.764 1.06-.89 1.593-1.336 1.731-2.118.283-1.62-4.005-7.614-4.05-7.668a2.289 2.289 0 0 0 -1.705-.97c-1.738 0-6.7 6.437-6.7 7.521 0 .063.091 6.467 7.988 14.5 8.025 7.888 14.428 7.979 14.491 7.979 1.085 0 7.521-4.962 7.521-6.7a2.283 2.283 0 0 0 -.965-1.7z"/>
                     </svg>
-                    023 637 21 232
-                </li>
-                <li>
-                    <svg id="Capa_1" enable-background="new 0 0 512 512" fill="#ffffff" viewBox="0 0 512 512"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <g>
-                            <path d="m471.647 176.983v-78.568l-98.811-98.415h-199.071v177.009l-40.353.004v-60.2h-133.059l-.353 395.187h512v-335.021zm-90-125.835 38.675 38.52h-38.675zm-177.882-21.104h147.882v89.668h90v57.273l-237.882.021zm-173.412 116.813h73.059v335.099h-73.059zm451.647 335.099h-348.588v-274.899l348.588-.032z"/>
-                            <path d="m417 235.45h-218.588v99.133h218.588zm-30 69.09h-158.588v-39.045h158.588z"/>
-                            <path d="m198.412 365.41h30v30.044h-30z"/>
-                            <path d="m261.274 365.41h30v30.044h-30z"/>
-                            <path d="m324.137 365.41h30v30.044h-30z"/>
-                            <path d="m387 365.41h30v30.044h-30z"/>
-                            <path d="m198.412 421.483h30v30.044h-30z"/>
-                            <path d="m261.274 421.483h30v30.044h-30z"/>
-                            <path d="m324.137 421.483h30v30.044h-30z"/>
-                            <path d="m387 421.483h30v30.044h-30z"/>
-                        </g>
-                    </svg>
-                    024 628 33 456
+                    0911 392 019
                 </li>
             </ul>
         </div>
         <div class="col col2">
-            <p class="title">Văn Phòng TP HCM</p>
+            <p class="title">GIỚI THIỆU</p>
             <ul>
                 <li>
-                    <svg enable-background="new 0 0 512 512" fill="#ffffff" viewBox="0 0 512 512"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <g>
-                            <path d="m407.579 87.677c-31.073-53.624-86.265-86.385-147.64-87.637-2.62-.054-5.257-.054-7.878 0-61.374 1.252-116.566 34.013-147.64 87.637-31.762 54.812-32.631 120.652-2.325 176.123l126.963 232.387c.057.103.114.206.173.308 5.586 9.709 15.593 15.505 26.77 15.505 11.176 0 21.183-5.797 26.768-15.505.059-.102.116-.205.173-.308l126.963-232.387c30.304-55.471 29.435-121.311-2.327-176.123zm-151.579 144.323c-39.701 0-72-32.299-72-72s32.299-72 72-72 72 32.299 72 72-32.298 72-72 72z"/>
-                        </g>
-                    </svg>
-                    643 Điện Biên Phủ, P. 25, Q. Bình Thạnh, TP. Hồ Chí Minh
+                    <a href=""><span>►</span> Giới thiệu chung</a>
                 </li>
                 <li>
-                    <svg fill="#ffffff" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-                        <path d="m30.035 22.6c-.082-.065-6.035-4.356-7.669-4.048-.78.138-1.226.67-2.121 1.735-.144.172-.49.584-.759.877a12.517 12.517 0 0 1 -1.651-.672 13.7 13.7 0 0 1 -6.321-6.321 12.458 12.458 0 0 1 -.672-1.651c.294-.27.706-.616.882-.764 1.06-.89 1.593-1.336 1.731-2.118.283-1.62-4.005-7.614-4.05-7.668a2.289 2.289 0 0 0 -1.705-.97c-1.738 0-6.7 6.437-6.7 7.521 0 .063.091 6.467 7.988 14.5 8.025 7.888 14.428 7.979 14.491 7.979 1.085 0 7.521-4.962 7.521-6.7a2.283 2.283 0 0 0 -.965-1.7z"/>
-                    </svg>
-                    028 629 75 599
+                    <a href=""><span>►</span> Sứ mệnh và tầm nhìn</a>
                 </li>
                 <li>
-                    <svg id="Capa_1" enable-background="new 0 0 512 512" fill="#ffffff" viewBox="0 0 512 512"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <g>
-                            <path d="m471.647 176.983v-78.568l-98.811-98.415h-199.071v177.009l-40.353.004v-60.2h-133.059l-.353 395.187h512v-335.021zm-90-125.835 38.675 38.52h-38.675zm-177.882-21.104h147.882v89.668h90v57.273l-237.882.021zm-173.412 116.813h73.059v335.099h-73.059zm451.647 335.099h-348.588v-274.899l348.588-.032z"/>
-                            <path d="m417 235.45h-218.588v99.133h218.588zm-30 69.09h-158.588v-39.045h158.588z"/>
-                            <path d="m198.412 365.41h30v30.044h-30z"/>
-                            <path d="m261.274 365.41h30v30.044h-30z"/>
-                            <path d="m324.137 365.41h30v30.044h-30z"/>
-                            <path d="m387 365.41h30v30.044h-30z"/>
-                            <path d="m198.412 421.483h30v30.044h-30z"/>
-                            <path d="m261.274 421.483h30v30.044h-30z"/>
-                            <path d="m324.137 421.483h30v30.044h-30z"/>
-                            <path d="m387 421.483h30v30.044h-30z"/>
-                        </g>
-                    </svg>
-                    024 628 33 456
+                    <a href=""><span>►</span> Văn hóa doanh nghiệp</a>
                 </li>
             </ul>
         </div>
         <div class="col col2">
-            <p class="title">Văn Phòng Singapore</p>
+            <p class="title">SẢN PHẨM</p>
             <ul>
                 <li>
-                    <svg enable-background="new 0 0 512 512" fill="#ffffff" viewBox="0 0 512 512"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <g>
-                            <path d="m407.579 87.677c-31.073-53.624-86.265-86.385-147.64-87.637-2.62-.054-5.257-.054-7.878 0-61.374 1.252-116.566 34.013-147.64 87.637-31.762 54.812-32.631 120.652-2.325 176.123l126.963 232.387c.057.103.114.206.173.308 5.586 9.709 15.593 15.505 26.77 15.505 11.176 0 21.183-5.797 26.768-15.505.059-.102.116-.205.173-.308l126.963-232.387c30.304-55.471 29.435-121.311-2.327-176.123zm-151.579 144.323c-39.701 0-72-32.299-72-72s32.299-72 72-72 72 32.299 72 72-32.298 72-72 72z"/>
-                        </g>
-                    </svg>
-                    38-03 Singapore Land Tower, 50 Raffles Place, Singapore 048623
+                    <a href=""><span>►</span> Giải pháp CAD/CAM</a>
                 </li>
                 <li>
-                    <svg fill="#ffffff" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-                        <path d="m30.035 22.6c-.082-.065-6.035-4.356-7.669-4.048-.78.138-1.226.67-2.121 1.735-.144.172-.49.584-.759.877a12.517 12.517 0 0 1 -1.651-.672 13.7 13.7 0 0 1 -6.321-6.321 12.458 12.458 0 0 1 -.672-1.651c.294-.27.706-.616.882-.764 1.06-.89 1.593-1.336 1.731-2.118.283-1.62-4.005-7.614-4.05-7.668a2.289 2.289 0 0 0 -1.705-.97c-1.738 0-6.7 6.437-6.7 7.521 0 .063.091 6.467 7.988 14.5 8.025 7.888 14.428 7.979 14.491 7.979 1.085 0 7.521-4.962 7.521-6.7a2.283 2.283 0 0 0 -.965-1.7z"/>
-                    </svg>
-                    (65) 6610 8527
+                    <a href=""><span>►</span> Giải pháp CAE</a>
                 </li>
                 <li>
-                    <svg id="Capa_1" enable-background="new 0 0 512 512" fill="#ffffff" viewBox="0 0 512 512"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <g>
-                            <path d="m471.647 176.983v-78.568l-98.811-98.415h-199.071v177.009l-40.353.004v-60.2h-133.059l-.353 395.187h512v-335.021zm-90-125.835 38.675 38.52h-38.675zm-177.882-21.104h147.882v89.668h90v57.273l-237.882.021zm-173.412 116.813h73.059v335.099h-73.059zm451.647 335.099h-348.588v-274.899l348.588-.032z"/>
-                            <path d="m417 235.45h-218.588v99.133h218.588zm-30 69.09h-158.588v-39.045h158.588z"/>
-                            <path d="m198.412 365.41h30v30.044h-30z"/>
-                            <path d="m261.274 365.41h30v30.044h-30z"/>
-                            <path d="m324.137 365.41h30v30.044h-30z"/>
-                            <path d="m387 365.41h30v30.044h-30z"/>
-                            <path d="m198.412 421.483h30v30.044h-30z"/>
-                            <path d="m261.274 421.483h30v30.044h-30z"/>
-                            <path d="m324.137 421.483h30v30.044h-30z"/>
-                            <path d="m387 421.483h30v30.044h-30z"/>
-                        </g>
-                    </svg>
-                    (65) 6612 3055
+                    <a href=""><span>►</span> Dữ liệu thông minh</a>
                 </li>
             </ul>
         </div>
-
+        <div class="col col2">
+            <p class="title">ĐĂNG KÝ NHẬN TIN</p>
+            <div class="frm-newsl">
+                <form action="" method="post" id="frmnewsl">
+                    <input type="hidden" name="code" value="save">
+                    <input type="text" placeholder="Email *" name="txtemail" class="notNull">
+                    <a class="btn-frm-newsl" href="javascript:void(0)" onclick="$('#frmnewsl').submit()"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></a>
+                </form>
+            </div>
+            <div id="msgbox_frmnewsl" class="msgbox"></div>
+            <div class="linksmo">
+                <span class="">Liên kết mạng xã hội:</span>
+                <a href="https://www.facebook.com/upviet.com.vn/" target="_blank" class="fa fa-facebook hvr-float"></a>
+                <a href="" target="_blank" class="fa fa-instagram hvr-float"></a>
+                <a href="https://www.youtube.com/channel/UCGYGPEKaJV_xAOorBEBoZ7g" target="_blank" class="fa fa-youtube hvr-float"></a>
+            </div>
+        </div>
     </div>
     </div>
 </div>
