--- a/index.html
+++ b/index.html
@@ -603,6 +603,15 @@
                 </div>
             </div>
         </div>
+        <!-- slides end -->
+        <div class="slider__control">
+            <div class="slider__control-line"></div>
+            <div class="slider__control-line"></div>
+        </div>
+        <div class="slider__control slider__control--right m--right">
+            <div class="slider__control-line"></div>
+            <div class="slider__control-line"></div>
+        </div>
     </div>
     <div class="clear"></div>
     <div class="slider-thumbnail default">
