--- a/index.html
+++ b/index.html
@@ -1520,10 +1520,10 @@
         $('#page').fadeOut().remove();
         setTimeout(function () {
             $('#myModal').slideToggle();
-        }, 1000);
+        }, 10000);
     });
 
-    $('.close').click(function () {
+    $('.close-full').click(function () {
         $('#myModal').fadeOut();
         clearTimeout();
     });
