--- a/index.html
+++ b/index.html
@@ -255,13 +255,13 @@
                         <a href="">Tin tức</a>
                         <ul class="sub-menu">
                             <li>
-                                <a href="chitiet.html">Chứng chỉ chất lượng</a>
+                                <a href="/chat-luong-hoa-phat#scrool-certificate">Chứng chỉ chất lượng</a>
                             </li>
                             <li>
-                                <a href="chitiet.html">Công nghệ</a>
+                                <a href="/chat-luong-hoa-phat#scrool-technology">Công nghệ</a>
                             </li>
                             <li>
-                                <a href="chitiet.html">Giải thưởng</a>
+                                <a href="/chat-luong-hoa-phat#scrool-prize">Giải thưởng</a>
                             </li>
                         </ul>
                     </li>
@@ -325,13 +325,13 @@
                         <a href="">Tin tức</a>
                         <ul class="sub-menu">
                             <li>
-                                <a href="index.html">Chứng chỉ chất lượng</a>
+                                <a href="/chat-luong-hoa-phat#scrool-certificate">Chứng chỉ chất lượng</a>
                             </li>
                             <li>
-                                <a href="index.html">Công nghệ</a>
+                                <a href="/chat-luong-hoa-phat#scrool-technology">Công nghệ</a>
                             </li>
                             <li>
-                                <a href="index.html">Giải thưởng</a>
+                                <a href="/chat-luong-hoa-phat#scrool-prize">Giải thưởng</a>
                             </li>
                         </ul>
                     </li>
@@ -359,7 +359,7 @@
         </div>
     </div>
 </div>
-<div class="mb-search-box">
+<div class="mb-search-box" 1>
     <div class="header_text">
         <div class="fl"><em id="close-box-search"></em></div>
         <div class="search_warp">
