--- a/tintuc.html
+++ b/tintuc.html
@@ -214,7 +214,7 @@
                         <a href="index.html">Trang chủ</a>
                     </li>
                     <li>
-                        <a href="">Giới thiệu</a>
+                        <a href="gioithieu.html">Giới thiệu</a>
                     </li>
                     <li>
                         <a href="">Sản phẩm</a>
