--- a/gioithieu.html
+++ b/gioithieu.html
@@ -261,7 +261,7 @@
                         <a href="">Trang chủ</a>
                     </li>
                     <li>
-                        <a href="">Giới thiệu</a>
+                        <a href="gioithieu.html">Giới thiệu</a>
                     </li>
                     <li>
                         <a href="sanpham.html">Sản phẩm</a>
