--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                         <a href="">Trang chủ</a>
                     </li>
                     <li>
-                        <a href="">Giới thiệu</a>
+                        <a href="gioithieu.html">Giới thiệu</a>
                     </li>
                     <li>
                         <a href="sanpham.html">Sản phẩm</a>
@@ -293,7 +293,7 @@
                         <a href="index.html">Trang chủ</a>
                     </li>
                     <li>
-                        <a href="">Giới thiệu</a>
+                        <a href="gioithieu.html">Giới thiệu</a>
                     </li>
                     <li>
                         <a href="sanpham.html">Sản phẩm</a>
