--- a/sanpham.html
+++ b/sanpham.html
@@ -215,10 +215,10 @@
             <div class="navigation default">
                 <ul>
                     <li>
-                        <a href="">Trang chủ</a>
+                        <a href="index.html">Trang chủ</a>
                     </li>
                     <li>
-                        <a href="">Giới thiệu</a>
+                        <a href="gioithieu.html">Giới thiệu</a>
                     </li>
                     <li>
                         <a href="sanpham.html">Sản phẩm</a>
