--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div id="header" class="default">
         <div class="wrap">
             <div class="logo">
-                <a href=""><img src="images/logo.png" alt=""></a>
+                <a href=""><img src="images/logovisi.svg" alt=""></a>
             </div>
             <div class="search-nav">
                 <div class="search-social default">
